--- a/resources/styles/menu-styles/works.css
+++ b/resources/styles/menu-styles/works.css
@@ -43,7 +43,7 @@
 .card-content img {
     margin-top: 1rem;
     height: 8rem;
-    width: auto;
+    width: 8rem;
 }
 
 .card h2, .card {
